<resources>
    <string name="app_name">Lord of Endless Sands</string>
    <string name="app_name_rus">Повелитель безбрежной пустыни</string>


    <!-- Для верхней панели -->
    <string name="avatar_desc">Аватар героя</string>
    <string name="btn_stats">Статистика</string>
    <string name="btn_backpack">Рюкзак</string>
    <string name="ill_desc">Иллюстрация к главе</string>

    <!-- Для текста главы (заглушка) -->
    <string name="chapter_text_placeholder">"Плодородные земли Элгариола позади. Перед вами пустыня. Вряд ли удастся обнаружить здесь тропинку, а тем более какую-нибудь дорогу, так что придется ориентироваться только по солнцу. Одинокая гора должна быть где-то на востоке, но стоит ли отправляться туда сразу? В деревушке, раскинувшейся у самого края пустыни, вы узнали, что древний караванный путь уходит на юго-восток. Там могут даже встретиться еще не пересохшие оазисы. Путь на северо-восток ведет к горам Лонсам. Куда направитесь вы?"</string>

    <!-- Для кнопок выбора -->
    <string name="choice1_text">На северо-восток</string>
    <string name="choice2_text">На юго-восток</string>
</resources>